tests/ui/fail/bytes_param/duplicate_parameters.stderr
error: encountered duplicate `bytes` parameter: duplicate set to 4
 --> tests/ui/fail/bytes_param/duplicate_parameters.rs:4:23
  |
4 | #[bitfield(bytes = 4, bytes = 4)]
  |                       ^^^^^

error: previous `bytes` parameter here
 --> tests/ui/fail/bytes_param/duplicate_parameters.rs:4:12
  |
4 | #[bitfield(bytes = 4, bytes = 4)]
  |            ^^^^^
